--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "watch": "tsc -p src -w",
     "build": "rm -rf lib && tsc",
     "typings": "./node_modules/typings/dist/bin.js",
-    "postinstall": "npm run typings install",
+    "webdriver-update": "webdriver-manager update",
+    "webdriver-start": "webdriver-manager start",
+    "postinstall": "npm run webdriver-update && typings install",
+    "e2e": "protractor",
+    "e2e-live": "protractor --elementExplorer",
     "test": "karma start",
-    "watch:test": "npm run test -- --auto-watch --no-single-run"
+    "test-watch": "karma start --no-single-run --auto-watch",
+    "ci": "npm run e2e && npm run test"
   },
   "repository": {
     "type": "git",
@@ -41,6 +46,7 @@
     "json-loader": "^0.5.3",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
+    "protractor": "^3.1.1",
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
