Add test coverage

--- a/package.json
+++ b/package.json
@@ -46,14 +46,20 @@
     "json-loader": "^0.5.3",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
-    "protractor": "^3.1.1",
     "karma": "^1.2.0",
+    "karma-webpack": "^1.8.0",
     "karma-jasmine": "^1.0.2",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha-reporter": "^2.0.3",
+    "karma-remap-istanbul": "0.1.1",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "remap-istanbul": "^0.6.4",
     "jasmine-core": "^2.4.1",
-    "phantomjs-prebuilt": "^2.1.7"
+    "jasmine-spec-reporter": "^2.4.0",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "^3.1.1"
   },
   "dependencies": {
     "@angular/compiler": "2.0.0",
