--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ng2-vardius-search",
   "version": "1.0.4",
   "description": "Angular 2 search module",
+  "main": "index.js",
   "scripts": {
     "watch": "tsc -p src -w",
     "build": "rm -rf lib && tsc",
